# kuramoto-oscillators

./: .gitignore  Cargo.toml  check_condition.py  create_params.py  my_functions.py  plot_network.py  plot_result.py
src/: kuramoto_oscillators.rs  main.rs  param_generator.rs  parameter.rs
