[package]
name = "kuramoto_oscillators"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
rand = "0.8.5"
rand_chacha = "*"
matrix = { git = "https://github.com/Ryo-sunken/matrix-rs.git", feature = ["rayon"] }
ode_solver = { git = "https://github.com/Ryo-sunken/ode-solver.git", feature = ["rayon"] }

[profile.release]
debug = true